<resources>
    <string name="app_name">KFC</string>

    <string name="description">
        KFC is the largest chicken restaurant brand in the world. Everyday KFC serves nearly
        8 million customers in its 15,000 outlets located in over 100 countries worldwide.
    </string>

    <string name="hours">24 hour</string>

    <string name="address">128 Sudan Street - Giza</string>

    <string name="phone_number">19019</string>

    <string name="website">http://www.kfc-arabia.com</string>
</resources>
