<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hossam.kfc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/kfc_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/kfc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/description"
            android:padding="16dp"/>

        <RelativeLayout
            style="@style/RelativeLayoutStyle" >

            <ImageView
                android:id="@+id/clock_image_view"
                style="@style/IconStyle"
                android:src="@drawable/clock"/>

            <TextView
                style="@style/TextStyle"
                android:layout_toRightOf="@id/clock_image_view"
                android:layout_centerVertical="true"
                android:text="@string/hours"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/RelativeLayoutStyle" >

            <ImageView
                android:id="@+id/location_image_view"
                style="@style/IconStyle"
                android:src="@drawable/location"/>

            <TextView
                style="@style/TextStyle"
                android:layout_toRightOf="@id/location_image_view"
                android:text="@string/address"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/RelativeLayoutStyle" >

            <ImageView
                android:id="@+id/phone_image_view"
                style="@style/IconStyle"
                android:src="@drawable/phone"/>

            <TextView
                style="@style/TextStyle"
                android:layout_toRightOf="@id/phone_image_view"
                android:text="@string/phone_number"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/RelativeLayoutStyle" >

            <ImageView
                android:id="@+id/website_image_view"
                style="@style/IconStyle"
                android:src="@drawable/website"/>

            <TextView
                style="@style/TextStyle"
                android:layout_toRightOf="@id/website_image_view"
                android:text="@string/website"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_dark"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>




